# birdsongvst

./: README.md
birdsongvst/: Cargo.toml  README.md
birdsongvst/src/pi/: sine.rs
python_synth/: data.npz  synth.py
rust_synth/: Cargo.toml
rust_synth/data/: alpha.raw  beta.raw  envelope.raw
rust_synth/src/: main.rs
